<resources>
    <string name="app_name">SnackStock</string>
    <string name="confirm_button_text">Valider</string>
    <string name="cancel_button_text">Annuler</string>
    <string name="management_button_text">Passer en mode gestion</string>
    <string name="quit_management_button_text">Quitter le mode gestion</string>
    <string name="add_product_button_text">Ajouter</string>
    <string name="suppr_button_text">Supprimer</string>
    <string name="snack_button_text">Snacks</string>
    <string name="boisson_button_text">Boissons</string>
    <string name="autre_button_text">Autres</string>
    <string name="ventes_button_text">Ventes</string>
    <string name="free_conso_text">Consommations gratuites:</string>
    <string name="free_menu_text">Menus gratuits:</string>
    <string name="call_resp_text">Appelez un responsable pour confirmer</string>
    <string name="ask_pass_text">Appelez un responsable pour confirmer</string>
    <string name="wrong_pass_text">Mot de passe erroné</string>
    <string name="default_current_tab_text">Aucun onglet sélectionné</string>
    <string name="add_product_text">Ajouter un nouveau produit</string>
    <string name="autres_current_tab_text">Autres</string>
    <string name="default_price_text">0 €</string>
    <string name="ajouter_button_text">Ajouter</string>
    <string name="calculer_button_text">Calculer</string>
    <string name="cart_add_button_text">+</string>
    <string name="cart_remove_button_text">-</string>
    <string name="hello_asso_option">HelloAsso</string>
    <string name="password_hint">Mot de passe</string>
    <string name="placeholder">Placeholder</string>
    <string name="placeholder_short">XX</string>
    <string name="placeholder_number">0</string>
    <string name="panier">Panier</string>
    <string name="name_add_product">Nom :</string>
    <string name="name_add_product_hint">Nom</string>
    <string name="quantity_add_product">Quantité :</string>
    <string name="quantity_add_product_hint">Quantité</string>
    <string name="type_add_product">Type :</string>
    <string name="price_add_product">Prix :</string>
    <string name="price_add_product_hint">Prix</string>
    <string name="date_hint">AAAA-MM-JJ</string>
    <string name="title_low_right">Calculer le total des ventes</string>
    <string name="du">Du</string>
    <string name="au">au</string>
    <string name="type">Type</string>
</resources>